--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <div id="oneB">
     <p id="oneB1">The 7–11 was only a block from my house, it would just be a short quick walk to get the Root Beer. I had only recently just finished a shift at my job and I definitely deserved a treat for myself.</p>
-    <p id="oneB2">I got up and grabbsed my keys and my wallet and when I went to go grab my keys, I thought, I’m only going a single block and will only be gone for like 5 minutes.</p>
+    <p id="oneB2">I got up and grabbed my keys and my wallet and when I went to go grab my keys, I thought, I’m only going a single block and will only be gone for like 5 minutes.</p>
     <p id="oneB3">I don’t <span>need</span> to take my phone with me everywhere.</p>
     <p id="oneB4">I left my apartment with my wallet and keys in hand and went off to go and buy myself a Root Beer.</p>
   </div>
@@ -76,14 +76,14 @@
   <div id="twoC">
     <div id="twoC-partOne">
       <p id="twoC1">I watched as in slow motion my keys slipped from my hand,</p>
-      <p id="twoC2">tumbled thorugh the air,</p>
+      <p id="twoC2">tumbled through the air,</p>
       <p id="twoC3">landed with a <span>thud</span> on the floor right by the thin black slit tha separated theelevator and the building's floor</p>
       <p id="twoC4">then I watched in horror as they <span>slid</span> into the dark abyss that was the elevator shaft.</p>
     </div>
     <!-- start second layout -->
     <div id="twoC-partTwo">
       <p id="twoC5">Now an easy thing to do in this situation would be to just call up my roommate or parents but unfortunately, I had left my apartment with just my keys and wallet in hand and left my phone locked inside my apartment.</p>
-      <p id="twoC6"> I was just going one block away to get a 7-11 big gulp. Now I was essentially stranded, all because I was missing two small items <span> a phone and key.</span></p>
+      <p id="twoC6"> I was just going one block away to get a 7-11 Big Gulp. Now I was essentially stranded, all because I was missing two small items <span> a phone and key.</span></p>
       <p id="twoC7">So there I was, standing in the elevator trying to process my circumstances. I started <span>running</span> through my options.</p>
       <p id="twoC8">I could call for help</p>
       <p id="twoC9" class="gray">but no cellphone means I can't contact anyone</p>
@@ -91,7 +91,7 @@
       <p id="twoC11" class="gray">only everyone is back home for the summer</p>
       <p id="twoC12">I could try to pick my lock,</p>
       <p id="twoC13" class="gray">but I have no idea how to pick a lock</p>
-      <p id="twoC14">I could try to climb in thorugh a window,</p>
+      <p id="twoC14">I could try to climb in through a window,</p>
       <p id="twoC15" class="gray">only my apartment is three stories up and I have never climbed anything hirer than a 3-foot fence</p>
     </div>
   </div>
